@@ -1,3 +1,11 @@
+Version 35    Live Server Fixes
+
+--Buying a painting now updates the house value estimate immediately, in case
+  the player quits the game before finishing their house edit (thanks Chris
+  Bradford).
+
+
+
 Version 35      2014-March-31
 
 --Prevented blocked family members from jumping back to positions on top of
